# service_pod

./: .env  .gitignore  README.md  main.py  pyproject.toml
api/v1/: base.py  users.py
core/: config.py
db/: db.py
migrations/: env.py
migrations/versions/: 1906b697ba34_03_rename_user_db.py  60a2b62077b6_01_initial_db.py  72784b053c5d_01_initial_db.py  a1c847234686_02_kek_db.py
models/: models.py
schemas/: users.py
services/: base.py  users.py
tasks/: tasks.py
