[tool.poetry]
name = "service-pod"
version = "0.1.0"
description = ""
authors = ["mediator007 <mediator007@mail.ru>"]
readme = "README.md"
packages = [{include = "service_pod"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
fastapi = {extras = ["all"], version = "^0.92.0"}
uvicorn = "^0.20.0"
celery = "^5.2.7"
flower = "^1.2.0"
redis = "^4.5.1"
loguru = "^0.6.0"
sqlalchemy = "^2.0.4"
alembic = "^1.9.4"
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
